# cuda-galaxy

./: .gitignore  CMakeLists.txt  README.md  build.bat  configure.bat  main.cpp  performance.csv  run_benchmark.bat
shaders/: bloom.frag  bloom.vert  bloom_combine.frag  particle.frag  particle.vert
src/: application.cpp  application.h  benchmark.cpp  benchmark.h  camera.cpp  camera.h  galaxy.cpp  galaxy.h  main.cpp  main.cu  nbody.cu  nbody.cuh  renderer.cpp  renderer.h  simulation.cpp  simulation.cu  simulation.h  utils.cpp  utils.h  video_writer.cpp  video_writer.h
